完成期刊模块

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -131,8 +131,8 @@ a {
   border: 1px dashed #d9d9d9;
   border-radius: 6px;
   box-sizing: border-box;
-  width: 360px;
-  height: 180px;
+  width: 100%;
+  height: 100%;
   text-align: center;
   cursor: pointer;
   position: relative;
@@ -174,4 +174,10 @@ a {
 
 .v-note-wrapper .v-note-panel {
   min-height: 500px;
+}
+.handle-box{
+  margin-bottom: 20px;
+}
+.paginationWarp{
+  margin: 10px 0; 
 }
